finish basic user, book, part of order and other

--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,4 +1,6 @@
 ## MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/ebookStore
+spring.datasource.url=jdbc:mysql://localhost:3306/ebookstore
 spring.datasource.username=root
 spring.datasource.password=114514ccc
+# spring.sql.init.mode=always
+spring.sql.init.mode=never
