--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.application.name=eBookStore-backend
 spring.profiles.active=mysql
 spring.security.user.name=sa
 spring.security.user.password=password
+spring.mvc.static-path-pattern=/resources/**
+spring.web.resources.static-locations=classpath:/static/
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
