--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,13 @@ spring.security.user.password=password
 spring.mvc.static-path-pattern=/resources/**
 spring.web.resources.static-locations=classpath:/static/
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+server.ssl.key-store=classpath:tomcat.keystore
+server.ssl.key-store-password=ayanami
+server.ssl.key-password=ayanami
+server.ssl.key-alias=tomcat
+server.ssl.enabled=true
+server.port=8443
+server.ssl.key-store-type=JKS
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.same-site=None
